// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`useSendOnChainCancellation() + useGetOnChainCancellation() When a transaction is sent Then should change an order status, set a tx hash to order and add the transaction to store 1`] = `
[
  {
    "hash": "0xcfwj23g4fwe111",
    "onChainCancellation": {
      "orderId": "xx1",
      "sellTokenSymbol": "COW",
    },
  },
]
`;

exports[`useSendOnChainCancellation() + useGetOnChainCancellation() When a transaction is sent Then should change an order status, set a tx hash to order and add the transaction to store 2`] = `
[
  {
    "chainId": 1,
    "id": "xx1",
  },
]
`;

exports[`useSendOnChainCancellation() + useGetOnChainCancellation() When a transaction is sent Then should change an order status, set a tx hash to order and add the transaction to store 3`] = `
[
  {
    "chainId": 1,
    "hash": "0xcfwj23g4fwe111",
    "id": "xx1",
  },
]
`;
